Agregado el modelo usuario. conexion a base de datos, y controladores. Se agrego ademas una utilidad para la renderizacion de las vistas

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,11 @@
             "email": "juliancorredors99@outlook.com"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "App\\": "./App"
+        }
+    },
     "minimum-stability": "stable",
     "require": {}
 }
